--- a/changelog.txt
+++ b/changelog.txt
@@ -1,37 +1,37 @@
+## 0.1.10
+- Fix Bugs.
 ## 0.1.9
  - fix bugs.
-
+ 
 ## 0.1.7
  - fix bugs.
-
+ 
 ## 0.1.6
  - fix bugs.
  - add upload to upload any file.
  - Simplify the use of the program.
-
+ 
 ## 0.1.5
  - fix bugs.
-
 ## 0.1.4
  - fix bugs.
- - new build. 
-
+ - new build.
+ 
 ## 0.1.1
-- Import pakages by pipincluder.
-- Fix bugs.
-
+ - Import pakages by pipincluder.
+ - Fix bugs.
+ 
 ## 0.1.0
-- New build.
-- Fix bugs.
-
+ - New build.
+ - Fix bugs.
+ 
 ## 0.0.4
-- Fix bugs.
-
+ - Fix bugs.
+ 
 ## 0.0.2
-- Fix bugs.
-- Add help list.
-- Add Executing from files.
-
+ - Fix bugs.
+ - Add help list.
+ - Add Executing from files.
+ 
 ## 0.0.1
-- First public release.
-
+ - First public release.
