--- a/changelog.txt
+++ b/changelog.txt
@@ -1,10 +1,14 @@
 #
+## 0.1.14
+ - help menu update.
+ - Bug fixes & performance improvements.
+#
 ## 0.1.13
- - safety upgrade.
+ - Safety upgrade.
  - Bug fixes & performance improvements.
 #
 ## 0.1.12
- - safety upgrade.
+ - Safety upgrade.
  - Bug fixes & performance improvements.
 #
 ## 0.1.11
