--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,19 @@
+## 0.2.20 [10-08-2022]
+ - Change the display of files in the command "--ls"
+ - Fix "HIPHP_HOLE_CODE".
+ - Add "--cls" to clear console.
+ - Slight change to the command line interface logo.
+ - Bug fixes & performance improvements.
+
+## 0.2.19 [30-07-2022]
+ - Preparing for the new version.
+ - Rework the software rights with the addition of the Bitcoin wallet address.
+ - new logo design.
+ - Bug fixes & performance improvements.
+
+## 0.2.18 [06-07-2022]
+ - Bug fixes & performance improvements.
+
 ## 0.2.17 [03-07-2022]
  - Bug fixes on windows os.
 
