--- a/CHANGELOG
+++ b/CHANGELOG
@@ -56,6 +56,9 @@
 ## 0.1.9
  - fix bugs.
 
+## 0.1.8
+ - Fix bugs.
+
 ## 0.1.7
  - fix bugs.
 
@@ -71,6 +74,12 @@
  - fix bugs.
  - new build.
 
+## 0.1.3
+ - Fix bugs.
+
+## 0.1.2
+ - Fix bugs.
+
 ## 0.1.1
  - Import pakages by pipincluder.
  - Fix bugs.
@@ -80,6 +89,9 @@
  - Fix bugs.
 
 ## 0.0.4
+ - Fix bugs.
+
+## 0.0.3
  - Fix bugs.
 
 ## 0.0.2
