--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
-## 0.2.24 [28-08-2022][Last Version]
+## 0.2.25 [03-09-2022][Last Version]
+ - Fix "--down" command on windows os.
+ - Color correction in the command line interface on windows os.
+ - Bug fixes & performance improvements.
+
+## 0.2.24 [28-08-2022]
  - Fix "hiphp --ftp"
  - Add "--cd" command for Change directory.
  - Update all commands from "--command" to "command" (You can use both).
