--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+## 0.2.26 [xx-xx-2022][In Progress]
+ - Upgraded Docker files in order to be able to work from outside the container.
+ - Add download option in hiphp_desktop.
+ - Bug fixes & performance improvements.
+
 ## 0.2.25 [03-09-2022][Last Version]
  - Fix "--down" command on windows os.
  - Color correction in the command line interface on windows os.
