--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+## 0.2.27-beta [xx-09-2022][In Progress]
+ - Updated some CLI Errors messages.
+ - Updated CLI logo.
+ - Bug fixes & performance improvements.
+
 ## 0.2.26 [07-09-2022][Last Version]
  - Upgraded Docker files in order to be able to work from outside the container.
  - Add download option in hiphp_desktop.
