--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,13 +1,19 @@
+## 0.2.28 [XX-09-2022][In Progress]
+ - Add "font-awesome" to "php-desktop".
+ - Fix "hiphp --dst" & "hiphp --tk" after installation on Ubuntu.
+ - New icons for "php-desktop".
+ - Bug fixes & performance improvements.
+
 ## 0.2.27 [13-09-2022][Last Version]
  - Updated some CLI Errors messages.
  - Updated CLI logo.
  - Delete unused codes.
- - Upgrading php-desktop in order to avoid errors that occur with various systems.
+ - Upgrading "php-desktop" in order to avoid errors that occur with various systems.
  - Bug fixes & performance improvements.
 
 ## 0.2.26 [07-09-2022]
  - Upgraded Docker files in order to be able to work from outside the container.
- - Add download option in hiphp_desktop.
+ - Add download option in "hiphp_desktop".
  - Bug fixes & performance improvements.
 
 ## 0.2.25 [03-09-2022]
