--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,9 @@
 ## 0.2.28 [XX-09-2022][In Progress]
  - Add "font-awesome" to "php-desktop".
+ - Add icons to "php-desktop".
+ - Add auto login to "php-desktop".
+ - Add file information to "php-desktop".
  - Fix "hiphp --dst" & "hiphp --tk" after installation on Ubuntu.
- - New icons for "php-desktop".
  - Bug fixes & performance improvements.
 
 ## 0.2.27 [13-09-2022][Last Version]
