Add line numbering to textarea editor in --dst
Signed-off-by: Boudjada Yasser <by.root96@gmail.com>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@
  - Add icons to "php-desktop".
  - Add auto login to "php-desktop".
  - Add file information to "php-desktop".
+ - Add line numbering to textarea editor in "php-desktop".
  - Fix "hiphp --dst" & "hiphp --tk" after installation on Ubuntu.
  - Bug fixes & performance improvements.
 
