--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+## 0.2.29 [XX-10-2022][In Progress]
+ - Add the ability to install hiphp on termux Android.
+
 ## 0.2.28 [27-09-2022][Last Version]
  - Add "font-awesome" to "php-desktop".
  - Add icons to "php-desktop".
