--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,7 +7,7 @@
  - Fix default slash on windows server.
  - Change name of archive files.
  - Add "--rm" command to Delete files and folders.
- - Add a full site extractor and auto login in case of HIPHP_HOLE_CODE in a file.
+ - Add a full site extractor to find HIPHP_HOLE_CODE.
  - Improve some commands.
  - Bug fixes & performance improvements.
 
