--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-## 0.2.30 [XX-10-2022][In Progress]
+## 0.2.30 [02-11-2022][Last Version]
  - Fix auto login in "hiphp-desktop".
  - Fix file info in "hiphp-desktop".
  - Add Dark Mode option to settings in "hiphp-desktop".
@@ -8,10 +8,11 @@
  - Change name of archive files.
  - Add "--rm" command to Delete files and folders.
  - Add a full site extractor to find HIPHP_HOLE_CODE.
+ - Fix "hiphp --help" command.
  - Improve some commands.
  - Bug fixes & performance improvements.
 
-## 0.2.29 [13-10-2022][Last Version]
+## 0.2.29 [13-10-2022]
  - Add the ability to install hiphp on termux Android.
  - Add "--version" command.
  - Add Dark Mode template to "hiphp-desktop".
