--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+## 0.2.31.1 [In Progress]
+ - Update template in "hiphp-desktop".
+ - Bug fixes & performance improvements.
+
 ## 0.2.31 [27-11-2022][Last Version]
  - Add PWA (Service Worker) to "hiphp-desktop".
  - Updated installation options.
