--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
-## 0.2.31.1 [In Progress]
+## 0.2.32 [Last Version]
  - Update template in "hiphp-desktop".
+ - Update documents.
  - Bug fixes & performance improvements.
 
 ## 0.2.31 [27-11-2022][Last Version]
