--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-## 0.2.32 [Last Version]
+## 0.2.32 [05-12-2022][Last Version]
  - Update template in "hiphp-desktop".
  - Update documents.
  - Bug fixes & performance improvements.
