--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,7 @@
 ## 0.2.33 [05-12-2022][Last Version]
  - Bug fixes & performance improvements.
 
-## ̶0̶.̶2̶.̶3̶2̶ ̶[̶0̶5̶-̶1̶2̶-̶2̶0̶2̶2̶]̶
+## 0.2.32 [05-12-2022][Version cancelled]
  - Update template in "hiphp-desktop".
  - Update documents.
  - Bug fixes & performance improvements.
