--- a/hiphp.ipynb
+++ b/hiphp.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a18c23cd",
+   "id": "5ee93924",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -r requirements.txt"
+    "!git clone https://github.com/yasserbdj96/hiphp.git"
    ]
   },
   {
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -r requirements-ipynb.txt"
+    "%pip install -r hiphp/requirements.txt"
    ]
   },
   {
@@ -27,7 +27,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -r hiphp-desktop/requirements-dst.txt"
+    "%pip install -r hiphp/requirements-ipynb.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a18c23cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install -r hiphp/hiphp-desktop/requirements-dst.txt"
    ]
   },
   {
@@ -37,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python main.py ipynb <YOUR_NGROK_AUTHTOKEN>\n"
+    "!python hiphp-desktop/main.py ipynb <YOUR_NGROK_AUTHTOKEN>\n"
    ]
   }
  ],
