--- a/hiphp.ipynb
+++ b/hiphp.ipynb
@@ -43,11 +43,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6dd12936",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install hiphp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2c787a5c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python hiphp-desktop/main.py ipynb <YOUR_NGROK_AUTHTOKEN>\n"
+    "!python hiphp-desktop/main.py ipynb <YOUR_NGROK_AUTHTOKEN>"
    ]
   }
  ],
