--- a/hiphp.ipynb
+++ b/hiphp.ipynb
@@ -17,27 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -r hiphp/requirements.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a18c23cd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install -r hiphp/requirements-ipynb.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a18c23cd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install -r hiphp/hiphp-desktop/requirements-dst.txt"
+    "%pip install -r hiphp/requirements-ipynb.txt && pip install -r hiphp/hiphp-desktop/requirements-dst.txt && pip install -r hiphp/requirements.txt"
    ]
   },
   {
@@ -48,6 +28,44 @@
    "outputs": [],
    "source": [
     "%pip install hiphp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8a8024c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: selenium in /home/yasserbdj96/.local/lib/python3.10/site-packages (4.7.2)\n",
+      "Requirement already satisfied: urllib3[socks]~=1.26 in /usr/lib/python3/dist-packages (from selenium) (1.26.12)\n",
+      "Requirement already satisfied: trio~=0.17 in /home/yasserbdj96/.local/lib/python3.10/site-packages (from selenium) (0.22.0)\n",
+      "Requirement already satisfied: trio-websocket~=0.9 in /home/yasserbdj96/.local/lib/python3.10/site-packages (from selenium) (0.9.2)\n",
+      "Requirement already satisfied: certifi>=2021.10.8 in /usr/lib/python3/dist-packages (from selenium) (2022.9.24)\n",
+      "Requirement already satisfied: exceptiongroup>=1.0.0rc9 in /home/yasserbdj96/.local/lib/python3.10/site-packages (from trio~=0.17->selenium) (1.0.4)\n",
+      "Requirement already satisfied: async-generator>=1.9 in /home/yasserbdj96/.local/lib/python3.10/site-packages (from trio~=0.17->selenium) (1.10)\n",
+      "Requirement already satisfied: outcome in /home/yasserbdj96/.local/lib/python3.10/site-packages (from trio~=0.17->selenium) (1.2.0)\n",
+      "Requirement already satisfied: idna in /usr/lib/python3/dist-packages (from trio~=0.17->selenium) (3.3)\n",
+      "Requirement already satisfied: sortedcontainers in /home/yasserbdj96/.local/lib/python3.10/site-packages (from trio~=0.17->selenium) (2.4.0)\n",
+      "Requirement already satisfied: sniffio in /home/yasserbdj96/.local/lib/python3.10/site-packages (from trio~=0.17->selenium) (1.3.0)\n",
+      "Requirement already satisfied: attrs>=19.2.0 in /home/yasserbdj96/.local/lib/python3.10/site-packages (from trio~=0.17->selenium) (22.1.0)\n",
+      "Requirement already satisfied: wsproto>=0.14 in /home/yasserbdj96/.local/lib/python3.10/site-packages (from trio-websocket~=0.9->selenium) (1.2.0)\n",
+      "Requirement already satisfied: PySocks!=1.5.7,<2.0,>=1.5.6 in /home/yasserbdj96/.local/lib/python3.10/site-packages (from urllib3[socks]~=1.26->selenium) (1.7.1)\n",
+      "Requirement already satisfied: h11<1,>=0.9.0 in /home/yasserbdj96/.local/lib/python3.10/site-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium) (0.14.0)\n",
+      "Reading package lists... Done\n",
+      "E: Could not open lock file /var/lib/apt/lists/lock - open (13: Permission denied)\n",
+      "E: Unable to lock directory /var/lib/apt/lists/\n",
+      "W: Problem unlinking the file /var/cache/apt/pkgcache.bin - RemoveCaches (13: Permission denied)\n",
+      "W: Problem unlinking the file /var/cache/apt/srcpkgcache.bin - RemoveCaches (13: Permission denied)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install selenium && apt-get update && apt install chromium-chromedriver"
    ]
   },
   {
