fix bugs & update template
Signed-off-by: Boudjada Yasser <by.root96@gmail.com>

--- a/hiphp.ipynb
+++ b/hiphp.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python hiphp-desktop/main.py ipynb <YOUR_NGROK_AUTHTOKEN>"
+    "!python hiphp/hiphp-desktop/main.py ipynb <YOUR_NGROK_AUTHTOKEN>"
    ]
   }
  ],
