--- a/hiphp.ipynb
+++ b/hiphp.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5d3e37b4",
+   "metadata": {},
+   "source": [
+    "Download,clear & install supplies requirements:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5ee93924",
@@ -41,6 +50,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "052510ad",
+   "metadata": {},
+   "source": [
+    "Run hiphp-desktop on NGROK:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2c787a5c",
@@ -67,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.9 (main, Dec  7 2022, 13:47:07) [GCC 12.2.0]"
   },
   "vscode": {
    "interpreter": {
