--- a/hiphp.ipynb
+++ b/hiphp.ipynb
@@ -6,7 +6,7 @@
    "id": "5d3e37b4",
    "metadata": {},
    "source": [
-    "Download,clear & install supplies requirements:"
+    "Download & install requirements:"
    ]
   },
   {
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -r hiphp/requirements-ipynb.txt && pip install -r hiphp/hiphp-desktop/requirements-dst.txt && pip install -r hiphp/requirements.txt"
+    "!pip install -r hiphp/requirements-ipynb.txt && pip install -r hiphp/hiphp-desktop/requirements-dst.txt && pip install -r hiphp/requirements.txt"
    ]
   },
   {
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install hiphp"
+    "!pip install hiphp"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9 (main, Dec  7 2022, 13:47:07) [GCC 12.2.0]"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
