- Bug fixes & performance improvements.
Signed-off-by: Boudjada Yasser <by.root96@gmail.com>

--- a/hiphp-tk/CHANGELOG
+++ b/hiphp-tk/CHANGELOG
@@ -1,3 +1,6 @@
-## 1.1.9 [18-11-2022][Last Version]
+## 1.1.10 [15-06-2023][Last Version]
+ - Bug fixes & performance improvements.
+
+## 1.1.9 [18-11-2022]
  - Add login window on "hiphp-tk".
  - Bug fixes & performance improvements.
