--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 ## 0.3.6 [03-09-2023][Beta]:
  - Fix errors in the Windows os.
+ - Revise assistance messages.
  - Bug fixes & performance improvements.
 
 ## 0.3.5 [12-06-2023][Latest Release]:
