--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,13 @@
-## 0.3.6 [03-09-2023][Beta]:
- - Fix errors in the Windows os.
- - Revise assistance messages.
+## 0.3.6 [14-09-2023][Beta]:
+ - Make connections work better with proxies for hiphp-cli only.
+ - Fix command line errors on Windows.
+ - Solve errors on Windows related to TK.
+ - Make downloads in the DST feature work correctly.
+ - Make it easier to browse files in DST on Windows.
+ - Make DST icons look and work better on Windows.
+ - Make the DST feature look and work better.
+ - Add new commands (--y,--proxies).
+ - Improve messages to help users understand better.
  - Bug fixes & performance improvements.
 
 ## 0.3.5 [12-06-2023][Latest Release]:
